Fix space with overflow attribute

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,10 @@
   padding: 0;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 /* Sytle content */
 .logo {
   width: 90px;
